Fix btn form, welcome slider overlay, services dots z-index, filter default sort

--- a/src/scss/components/form_section.scss
+++ b/src/scss/components/form_section.scss
@@ -93,5 +93,8 @@
       height: 0;
       color: map-get($colors, "orange");
     }
+    .btn {
+      border: none;
+    }
   }
 }
