--- a/src/scss/components/services_section.scss
+++ b/src/scss/components/services_section.scss
@@ -179,6 +179,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      z-index: 3;
       @include media("<widescreen") {
         left: 10px;
       }
