--- a/src/scss/components/welcome_section/welcome_slider.scss
+++ b/src/scss/components/welcome_section/welcome_slider.scss
@@ -32,7 +32,7 @@
       width: 100%;
       height: 100%;
       background-color: #000;
-      opacity: 0.7;
+      opacity: 0.75;
       z-index: 2;
     }
     .btn_row {
